styles: fix margin spacing of pages

--- a/styles/blogs.module.css
+++ b/styles/blogs.module.css
@@ -24,13 +24,6 @@
   flex: 1;
 }
 
-
-@media only screen and (min-width: 600px) {
-  .blogs {
-    margin-top: 64px;
-  }
-}
-
 @media (width<=1007px) {
   .blogs__main {
     flex-direction: column;
